--- a/style.css
+++ b/style.css
@@ -27,15 +27,15 @@
   background-size: cover;
   }
   h1, h2, h3, h4, h5, a, span, p {
-    font-family: Raleway;
+    font-family: Roboto;
   }
 
   .footer-copyright {
-    font-family: Raleway;
+    font-family: Roboto;
   }
 
   .card-title {
-    font-family: Raleway;
+    font-family: Roboto;
   }
   .navlinks {
     font-weight: 300;
